# haskellbot

./: README.md  Specification of project.md  haskellbot.cabal  stack.yaml
src/: Hoogle.hs  Main.hs
