name:                haskellbot
version:             0.1.0.4
synopsis:            haskellbot
description:         Please see README.md
homepage:            https://github.com/kopninantonbuf/haskellbot
author:              students (Stepin, Kopnin, Zaharova)
maintainer:          kopninantonbuf@sfedu.ru
copyright:           2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable haskellbot-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Hoogle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , errors
                     , exceptions
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , stm
                     , telegram-api
                     , text
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kopninantonbuf/haskellbot
